ajout test background

--- a/web/css/appMondial.css
+++ b/web/css/appMondial.css
@@ -9,6 +9,7 @@ th:hover{
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    background-image: url("/Users/weilizheng/Library/CloudStorage/OneDrive-EPHECasbl/bac2/devWeb2/appMondial/web/img/coffee-brain-caffeine-neuroscincces.webp");
     margin: 0;
     padding: 0;
 }
