--- a/web/css/appMondial.css
+++ b/web/css/appMondial.css
@@ -1,18 +1,80 @@
 /* styles.css */
 
 /* Style pour le formulaire */
+html{
+    color: white;
+    height: 100%;
+    width: 100%;
+    scroll-behavior: smooth;
+}
+
 
 th:hover{
     cursor: pointer;
 }
 
 body {
+    color: white;
+    height: 100%;
+    width: 100%;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    background-image: url("/Users/weilizheng/Library/CloudStorage/OneDrive-EPHECasbl/bac2/devWeb2/appMondial/web/img/coffee-brain-caffeine-neuroscincces.webp");
+    background-color: #150205;
     margin: 0;
     padding: 0;
+
 }
+
+.bg{
+    height: 100%;
+    width: 100%;
+    background-image: url("../img/img.jpeg");
+    filter: blur(2px);
+  -webkit-filter: blur(2px);
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg-text h2{
+    color: white;
+}
+
+.bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+    margin: 15px;
+}
+
+button.tablinks{
+    color: black;
+    background-color: antiquewhite;
+}
+#affichage{
+    background-color: antiquewhite;
+}
+
+
+
+#reservation{
+    background-color: antiquewhite;
+}
+
 .container {
     max-width: 600px;
     margin: 0 auto;
@@ -26,15 +88,17 @@ h2 {
 }
 
 form {
+
     max-width: 400px;
     margin: 20px auto;
     padding: 20px;
-    background: #fff;
+    background: white;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
+    color: #150205;
     display: block;
     margin-bottom: 8px;
 }
@@ -51,9 +115,13 @@ textarea {
     border-radius: 4px;
 }
 
+.container h2{
+    color: antiquewhite;
+}
+
 input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #502c1c;
+    color: antiquewhite;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
@@ -62,7 +130,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: rgba(78, 44, 29, 0.65);
 }
 .tabcontent {
     display: none;
@@ -79,7 +147,7 @@ input[type="submit"]:hover {
     padding: 1em 2.5em;
     transition: 0.3s;
     border: 1px solid rgba(0,0,0,0.25);
-    border-radius: 1em 3em 0 0;
+    border-radius: 30px 30px 30px 30px;
     border-bottom: transparent;
     margin-top:0.25em;
 }
